hphp/test/slow/enum_supertyping/bad_wrong_base.php.expectf
Fatal error: F cannot include E - base type mismatch in %s/bad_wrong_base.php on line 8
